wal-macros/tests/html_macro_tests/custom_components/custom_component_without_props_without_default_fail.stderr
error[E0277]: the trait bound `PropsWithoutDefault: Default` is not satisfied
  --> tests/html_macro_tests/custom_components/custom_component_without_props_without_default_fail.rs:10:14
   |
10 |     html! { <CustomComponentPropsStructWithoutDefault /> };
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `PropsWithoutDefault`
   |
help: consider annotating `PropsWithoutDefault` with `#[derive(Default)]`
  --> tests/html_macro_tests/custom_components/../utils/custom_components/custom_component_props_struct_without_default.rs
   |
   + #[derive(Default)]
   | };
   |

error[E0277]: the trait bound `PropsWithoutDefault: Default` is not satisfied
  --> tests/html_macro_tests/custom_components/custom_component_without_props_without_default_fail.rs:11:14
   |
11 |     html! { <CustomComponentPropsStructWithoutDefault key="key" />};
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `PropsWithoutDefault`
   |
help: consider annotating `PropsWithoutDefault` with `#[derive(Default)]`
  --> tests/html_macro_tests/custom_components/../utils/custom_components/custom_component_props_struct_without_default.rs
   |
   + #[derive(Default)]
   | };
   |
